syntax = "proto3";
package Services.Base.HelloWorld;

service HelloWorldService {
  rpc SayHello (HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string message = 1;
}